--- a/templates/jobsignup.html
+++ b/templates/jobsignup.html
@@ -38,7 +38,7 @@
         <div class="filter filter-dropdown-container dropdown" id="add-filter">
             <button class="btn btn-secondary dropdown-toggle" type="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Lägg till ett filter
+                Lägg till filter
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <div class="dropdown-item filter-add" data-filter-id="filter-signedup"
