--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -16,6 +16,11 @@ div .nav-item
     &:first-child
         margin-left: 0
 
+span.nav-link:hover
+    text-decoration: none
+    color: rgba(0, 0, 0, .3) !important
+    cursor: default
+
 form > .nav-link
     margin-left: 5px !important
 
