--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -17,7 +17,7 @@ body.mobile
         &:focus
             outline: none
 
-        &.collapsed
+        &[aria-expanded=false]
             background-color: transparent
 
     .navbar-brand
