--- a/fadderjobb/static/sass/mobile/m_jobsignup.sass
+++ b/fadderjobb/static/sass/mobile/m_jobsignup.sass
@@ -32,5 +32,8 @@ body.mobile
     .dropdown-item
         font-size: 300%
 
+    .dropdown-toggle
+        padding: 0 15px
+
     .divider
         border: 2px solid rgba(0, 0, 0, .1)
