--- a/fadderjobb/static/sass/jobsignup.sass
+++ b/fadderjobb/static/sass/jobsignup.sass
@@ -41,6 +41,18 @@
 
 .dropdown-menu
     width: 100%
+    display: block
+
+    transition: all .2s linear
+
+    &:not(.show)
+        opacity: 0
+        height: 0
+        padding: 0
+        margin: 0
+
+        *
+            display: none
 
 .dropdown-toggle
     text-transform: none
@@ -49,9 +61,9 @@
     letter-spacing: 1px
     text-align: left
     padding: 15px
+    transition: background-color .05s linear
     &:hover
         background-color: #f7f7f9
-        transition: background-color .05s linear
     &::before
         display: inline-block
         width: 0
@@ -74,7 +86,7 @@
     display: flex
     flex-direction: row
     align-items: center
-    transition: all .3s linear
+    transition: all .2s linear
     > div:first-of-type
         margin-right: 10px
         &:hover
