Remove vh dependencies for mobile scaling

--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -6,8 +6,8 @@ body.mobile
         padding: 1.3rem .75rem
 
     .navbar-toggler
-        width: 5vh
-        height: 5vh
+        width: 120px
+        height: 90px
         font-size: 300%
 
         background-color: lightgray
@@ -32,7 +32,7 @@ body.mobile
             margin-top: 0
 
     .content
-        padding: 2vh 2vw
+        padding: 30px 2vw
 
     .tooltip
         font-size: 150%
