--- a/fadderjobb/static/sass/mobile/m_jobsignup.sass
+++ b/fadderjobb/static/sass/mobile/m_jobsignup.sass
@@ -12,7 +12,7 @@ body.mobile
 
     .filter, .filter-button
         min-width: 94vw
-        height: 4vh
+        height: 100px
 
     .filter-button
         font-size: 130%
