--- a/fadderjobb/static/sass/mobile/m_form.sass
+++ b/fadderjobb/static/sass/mobile/m_form.sass
@@ -7,7 +7,7 @@ body.mobile
 
         input
             font-size: 130%
-            height: 5vh
+            height: 90px
             width: 80vw
             max-width: 100vw
 
@@ -15,4 +15,4 @@ body.mobile
             margin: 0 auto
 
         [type=submit]
-            height: 5vh
+            height: 90px
