Fix animation bug with fixer-checkbox

--- a/fadderjobb/static/sass/jobsignup.sass
+++ b/fadderjobb/static/sass/jobsignup.sass
@@ -93,11 +93,14 @@
             cursor: default
     &.hidden, &.hidden *
         height: 0 !important
-        padding-top: 0 !important
-        padding-bottom: 0 !important
-        margin-top: 0 !important
-        margin-bottom: 0 !important
         opacity: 0 !important
+
+body:not(.mobile)
+    .filter-checkbox-wrapper.hidden
+        &.hidden, &.hidden *
+            padding: 0 !important
+            margin: 0 !important
+            width: 0 !important
 
 .filter-remove
     font-size: 150%
