--- a/fadderjobb/static/sass/mobile/m_jobsignup.sass
+++ b/fadderjobb/static/sass/mobile/m_jobsignup.sass
@@ -28,6 +28,11 @@ body.mobile
         display: flex
         flex-direction: row
         justify-content: space-between
+        &.hidden, &.hidden *
+            padding-top: 0 !important
+            padding-bottom: 0 !important
+            margin-top: 0 !important
+            margin-bottom: 0 !important
 
     .dropdown-item
         font-size: 300%
