--- a/fadderjobb/static/sass/profile.sass
+++ b/fadderjobb/static/sass/profile.sass
@@ -4,10 +4,13 @@
 h1
     margin-bottom: 0
 
+h2
+    margin-top: 20px
+
 h4
     margin-left: 20px
     margin-top: 20px
     margin-bottom: 5px
 
-.content a
+.job
     margin-left: 40px
