--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,7 +2,7 @@
 {% load static from staticfiles %}
 {% load sass_tags %}
 
-{% block title %}{{ user.username }}'s profile - {% endblock title %}
+{% block title %}{{ user.username }}:s profil - {% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="{% sass_src 'sass/profile.sass' %}">
@@ -10,14 +10,32 @@
 
 {% block content %}
     <div class="header">
-        <h1>{{ user.username }} - {{ user.points }}<span class="lowercase">p</span></h1>
+        <h1>
+            {% if request.user == user %}
+                <a href="{% url 'accounts:edit_profile' %}"><i class="far fa-edit"></i></a>
+            {% endif %}
+            {{ user.username }} - {{ user.points }}<span class="lowercase">p</span>
+        </h1>
         <small>{{ user.email }}</small>
     </div>
+    <h2>Motto</h2>
+    {% if user.motto %}
+        <i>"{{ user.motto }}"</i>
+    {% else %}
+        {% if request.user == user %}
+            <i>Du har inte satt något motto än. <a href="{% url 'accounts:edit_profile' %}">Sätt ditt motto här.</a></i>
+        {% else %}
+            <i>Användaren har inte satt något motto.</i>
+        {% endif %}
+    {% endif %}
     <h2>Registrerade jobb</h2>
     {% for day, jobs in day_grouped.items %}
         <h4>{{ day }}</h4>
-        {% for job in jobs %}
-            <a href="{% url 'fadderanmalan:jobsignup_detail' job.slug %}">{{ job.name }}</a><br>
+        {% for job in jobs %}  {# TODO Match design of jobsignup #}
+            <a class="job" href="{% url 'fadderanmalan:jobsignup_detail' job.slug %}">
+                {{ job.name }}
+            </a>
+            <br>
         {% endfor %}
     {% endfor %}
 {% endblock content %}
