Add mobile styling to textarea

--- a/fadderjobb/static/sass/mobile/m_form.sass
+++ b/fadderjobb/static/sass/mobile/m_form.sass
@@ -16,3 +16,10 @@ body.mobile
 
         [type=submit]
             height: 90px
+
+        textarea
+            font-size: 130%
+            padding: 40px 20px
+            text-align: left
+            min-width: 80vw
+            max-width: 80vw
