Add mobile styling to textarea

--- a/fadderjobb/static/sass/mobile/m_form.sass
+++ b/fadderjobb/static/sass/mobile/m_form.sass
@@ -19,6 +19,7 @@ body.mobile
 
         textarea
             font-size: 130%
+            line-height: 130%
             padding: 40px 20px
             text-align: left
             min-width: 80vw
