Restructure templates and static files to match relevant apps

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -2,7 +2,7 @@
 {% load static from staticfiles %}
 {% load sass_tags %}
 
-{% block title %}Redigera profil - {% endblock title %}
+{% block title %}Redigera min profil - {% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="{% sass_src 'sass/edit_profile.sass' %}">
