--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     </p>
 
     <p>
-        Hitta planerad funktionalitet, bakgrund och källkod på projektets
+        Hitta planerad funktionalitet, bakgrund och källkod i projektets
         <a href="https://github.com/RoosDaniel/Fadderjobb" target="_blank">GitHub-repo</a>.
     </p>
 {% endblock content %}
