--- a/fadderanmalan/static/sass/jobsignup.sass
+++ b/fadderanmalan/static/sass/jobsignup.sass
@@ -1,3 +1,5 @@
+@import mobile/m_jobsignup
+
 #filter-container
     display: flex
     flex-direction: row
@@ -81,45 +83,11 @@
         background-color: #222 !important
         color: white !important
 
-.filter-checkbox-wrapper
-    position: relative
-    display: flex
-    flex-direction: row
-    align-items: center
-    transition: all .2s linear, font-size 0s linear
-    > div:first-of-type
-        margin-right: 10px
-        &:hover
-            cursor: default
-    &.hidden, &.hidden *
-        height: 0 !important
-        opacity: 0 !important
-
-body:not(.mobile)
-    .filter-checkbox-wrapper.hidden
-        &.hidden, &.hidden *
-            padding: 0 !important
-            margin: 0 !important
-            width: 0 !important
-
 .filter-remove
     font-size: 150%
     padding: 15px
     &:hover
         cursor: pointer
-
-.filter-checkbox-container
-    display: flex
-
-.filter-checkbox-caret
-    position: absolute
-    height: 100%
-    transition: left .1s ease-in, width .05s linear, background-color .1s linear, opacity .1s linear
-    width: 52px
-    left: 0
-    opacity: 0
-    &.noanimate
-        transition: none
 
 .filter-select > label
     margin: 0 10px 0 0
@@ -129,77 +97,5 @@ body:not(.mobile)
     height: 52px
     background-color: #222
 
-.filter-checkbox
-    position: relative
-    height: 100%
-    input
-        position: absolute
-        opacity: 0
-        cursor: pointer
-        height: 0
-        width: 0
-    label
-        margin: 0
-        height: 100%
-
-.filter-checkbox-label
-    position: relative
-    display: inline-block
-    padding: 15px
-    font-weight: bold
-    height: 100%
-    z-index: 2
-    transition: all .1s linear
-    &:hover
-        cursor: pointer
-
-.filter-checkbox input:checked
-    + .filter-checkbox-label-no, + .filter-checkbox-label-yes
-        color: white
-
-.filter-checkbox-label-yes::before
-    content: "JA"
-
-.filter-checkbox-label-no::before
-    content: "NEJ"
-
 .divider
     width: 94vw
-
-.day
-    margin-top: 30px
-
-.job
-    display: block
-    max-width: 500px
-    overflow-y: hidden
-    background-color: #63bf69
-    color: white
-    margin: 10px
-    padding: 10px
-    transition: all .2s !important
-    &:hover
-        text-decoration: none
-        box-shadow: 0 1px 2px 0 #222
-    &.full, &.locked
-        background-color: #9c9c9c
-
-.job-title
-    position: relative
-    i
-        color: white
-
-.job-status
-    color: white
-    position: absolute
-    right: 0
-    top: 0
-
-.job-title
-    > h3
-        font-size: 140%
-    > *
-        display: inline
-
-.job-body
-    color: white
