--- a/fadderanmalan/templates/jobsignup.html
+++ b/fadderanmalan/templates/jobsignup.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 {% load sass_tags %}
+{% load components %}
 
 {% block title %}Jobbanmälan - {% endblock title %}
 
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{% sass_src 'sass/jobsignup.sass' %}">
-    <link rel="stylesheet" href="{% sass_src 'sass/mobile/m_jobsignup.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/components/job.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/components/filter_checkbox.sass' %}">
 {% endblock head %}
 
 {% block scripts %}
@@ -42,145 +44,33 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <div class="dropdown-item filter-add" data-filter-id="filter-signedup"
-                    {% if filter_signedup %} style="display: none;" {% endif %}>Anmäld</div>
+                        {% if filter_signedup %} style="display: none;" {% endif %}>Anmäld
+                </div>
                 <div class="dropdown-item filter-add" data-filter-id="filter-full"
-                    {% if filter_full %} style="display: none;" {% endif %}>Fullt</div>
+                        {% if filter_full %} style="display: none;" {% endif %}>Fullt
+                </div>
                 <div class="dropdown-item filter-add" data-filter-id="filter-leavequeue"
-                    {% if filter_leavequeue %} style="display: none;" {% endif %}>Faddrar vill lämna</div>
+                        {% if filter_leavequeue %} style="display: none;" {% endif %}>Faddrar vill lämna
+                </div>
                 <div class="dropdown-item filter-add" data-filter-id="filter-enterqueue"
-                    {% if filter_enterqueue %} style="display: none;" {% endif %}>Faddrar köar</div>
+                        {% if filter_enterqueue %} style="display: none;" {% endif %}>Faddrar köar
+                </div>
             </div>
         </div>
-        <div class="filter filter-checkbox-wrapper {% if not filter_signedup %}hidden{% endif %}" id="filter-signedup">
-            <div>Anmäld</div>
-            <div class="filter-checkbox-container">
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="signedup"
-                               value="0" {% if filter_signedup == "0" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-no"></span>
-                    </label>
-                </div>
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="signedup"
-                               value="1" {% if filter_signedup == "1" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
-                    </label>
-                </div>
-                <i class="far fa-times-circle filter-remove"></i>
-            </div>
-            <div class="filter-checkbox-caret"></div>
-        </div>
-        <div class="filter filter-checkbox-wrapper {% if not filter_full %}hidden{% endif %}" id="filter-full">
-            <div>Fullt</div>
-            <div class="filter-checkbox-container">
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="full"
-                               value="0" {% if filter_full == "0" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-no"></span>
-                    </label>
-                </div>
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="full"
-                               value="1" {% if filter_full == "1" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
-                    </label>
-                </div>
-                <i class="far fa-times-circle filter-remove"></i>
-            </div>
-            <div class="filter-checkbox-caret"></div>
-        </div>
-        <div class="filter filter-checkbox-wrapper {% if not filter_leavequeue %}hidden{% endif %}" id="filter-leavequeue">
-            <div>Faddrar vill lämna</div>
-            <div class="filter-checkbox-container">
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="leavequeue"
-                               value="0" {% if filter_leavequeue == "0" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-no"></span>
-                    </label>
-                </div>
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="leavequeue"
-                               value="1" {% if filter_leavequeue == "1" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
-                    </label>
-                </div>
-                <i class="far fa-times-circle filter-remove"></i>
-            </div>
-            <div class="filter-checkbox-caret"></div>
-        </div>
-        <div class="filter filter-checkbox-wrapper {% if not filter_enterqueue %}hidden{% endif %}" id="filter-enterqueue">
-            <div>Faddrar köar</div>
-            <div class="filter-checkbox-container">
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="enterqueue"
-                               value="0" {% if filter_enterqueue == "0" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-no"></span>
-                    </label>
-                </div>
-                <div class="filter-checkbox">
-                    <label>
-                        <input type="checkbox" name="enterqueue"
-                               value="1" {% if filter_enterqueue == "1" %}checked{% endif %}>
-                        <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
-                    </label>
-                </div>
-                <i class="far fa-times-circle filter-remove"></i>
-            </div>
-            <div class="filter-checkbox-caret"></div>
-        </div>
+        {% filter_checkbox_component "Anmäld" "filter-signedup" filter_signedup %}
+        {% filter_checkbox_component "Fullt" "filter-full" filter_full %}
+        {% filter_checkbox_component "Faddrar vill lämna" "filter-leavequeue" filter_leavequeue %}
+        {% filter_checkbox_component "Faddrar köar" "filter-enterqueue" filter_enterqueue %}
         <button class="btn btn-primary filter-button" type="submit">Filtrera</button>
     </form>
 
     <hr class="divider">
 
     {% for day, jobs in day_grouped.items %}
-        <h2 class="day">{{ day }}</h2>
+        <h2 class="job-day">{{ day }}</h2>
         <div class="joblist">
             {% for job in jobs %}
-                <a href="{% url 'fadderanmalan:jobsignup_detail' job.slug %}"
-                   class="job {{ job.full_status }} {{ job.locked_status }}">
-                    <div class="job-title">
-                        <h3>
-                            {% if request.user.is_authenticated and request.user in job.users.all %}
-                                <i class="far fa-check-circle"
-                                   data-toggle="tooltip" data-placement="left" title="Du är registrerad på jobbet">
-                                </i>
-                            {% endif %}
-                            {{ job.short_name }}
-                        </h3>
-                        <div class="job-status">
-                            {% if job.has_enter_queue %}
-                                <i class="fas fa-caret-square-right"
-                                   data-toggle="tooltip" data-placement="left" title="Faddrar köar för jobbet">
-                                </i>{{ " " }}
-                            {% endif %}
-                            {% if job.has_leave_queue %}
-                                <i class="fas fa-caret-square-left"
-                                   data-toggle="tooltip" data-placement="left" title="Faddrar vill lämna jobbet">
-                                </i>{{ " " }}
-                            {% endif %}
-                            {% if job.full %}
-                                <i class="fas fa-ban"
-                                   data-toggle="tooltip" data-placement="left" title="Jobbet är fullt">
-                                </i>{{ " " }}
-                            {% endif %}
-                            {% if job.locked %}
-                                <i class="fas fa-lock"
-                                   data-toggle="tooltip" data-placement="left" title="Jobbet är låst">
-                                </i>{{ " " }}
-                            {% endif %}
-                            {{ job.users.count }}/{{ job.slots }}
-                        </div>
-                    </div>
-                    <div class="job-body">{{ job.short_desc }}</div>
-                </a>
+                {% job_component job %}
             {% endfor %}
         </div>
     {% endfor %}
