--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% load components %}
 
 {% block head %}
-    {% load_sass 'index' %}
+    <link rel="stylesheet" href="{% sass_src 'sass/index.sass' %}">
 {% endblock head %}
 
 {% block content %}
