--- a/accounts/templates/accounts/registration.html
+++ b/accounts/templates/accounts/registration.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load sass_tags %}
 {% load components %}
 
 {% block title %}Registrera - {% endblock title %}
 
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
-    {% load_sass 'registration' %}
-    {% load_sass 'form' %}
+    <link rel="stylesheet" href="{% sass_src 'sass/registration.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/form.sass' %}">
 {% endblock head %}
 
 {% block content %}
