--- a/fadderanmalan/templates/jobdetails.html
+++ b/fadderanmalan/templates/jobdetails.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load sass_tags %}
 {% load components %}
 
 {% block title %}{{ job.name }} - {% endblock title %}
 
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
-    {% load_sass 'jobdetails' %}
+    <link rel="stylesheet" href="{% sass_src 'sass/jobdetails.sass' %}">
 {% endblock head %}
 
 {% block content %}
