--- a/fadderanmalan/templates/topchart.html
+++ b/fadderanmalan/templates/topchart.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load sass_tags %}
 {% load components %}
 
 {% block title %}Topplistan - {% endblock title %}
 
 {% block head %}
-    {% load_sass 'topchart' %}
+    <link rel="stylesheet" href="{% sass_src 'sass/topchart.sass' %}">
 {% endblock head %}
 
 {% block content %}
