Minor mobile styling changes

--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -23,6 +23,10 @@ body.mobile
     .navbar-brand
         font-size: 300%
 
+    .alert
+        font-size: 130%
+        padding: 1.5rem 2rem
+
     h1, h2, h3
         font-size: 150%
         margin-top: 4rem
@@ -36,3 +40,6 @@ body.mobile
 
     .tooltip
         font-size: 150%
+
+    small, .small
+        font-size: 100%
