--- a/fadderanmalan/templates/jobdetails.html
+++ b/fadderanmalan/templates/jobdetails.html
@@ -8,6 +8,7 @@
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{% sass_src 'sass/jobdetails.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/form.sass' %}">
 {% endblock head %}
 
 {% block content %}
