--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -3,15 +3,20 @@
 body
     color: #333
 
-div .nav-item
-    margin: 0
-
-.navbar-brand img
-    width: 15%
-    height: 15%
-
 .nav-item
     display: flex !important
+    margin: 0
+
+.navbar-brand
+    padding: .5em 1em
+    margin-right: .5em
+    border-radius: 5px
+
+    transition: all .1s linear
+
+    &:hover
+        background-color: #333
+        color: white !important
 
 .nav-link
     margin: 0 5px
