--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -11,32 +11,44 @@
 {% endblock head %}
 
 {% block content %}
-    <div class="header">
-        <h1>
-            {% if request.user == user %}
-                <a href="{% url 'accounts:edit_profile' %}"><i class="far fa-edit"></i></a>
-            {% endif %}
-            {{ user.username }} - {{ user.points }}<span class="lowercase">p</span>
-        </h1>
-        <small>{{ user.email }}</small>
-    </div>
-    <h2>Motto</h2>
-    {% if user.motto %}
-        <i>"{{ user.motto }}"</i>
-    {% else %}
-        {% if request.user == user %}
-            <i>Du har inte satt något motto än. <a href="{% url 'accounts:edit_profile' %}">Sätt ditt motto här.</a></i>
-        {% else %}
-            <i>Användaren har inte satt något motto.</i>
-        {% endif %}
-    {% endif %}
-    <h2>Registrerade jobb</h2>
-    {% for day, jobs in day_grouped.items %}
-        <h3 class="job-day">{{ day }}</h3>
-        <div class="joblist">
-            {% for job in jobs %}
-                {% job_component job %}
-            {% endfor %}
+    {% if request.user.is_superuser %}
+        <div class="header">
+            <h1>
+                {% if request.user == user %}
+                    <a href="{% url 'accounts:edit_profile' %}"><i class="far fa-edit"></i></a>
+                {% endif %}
+                {{ user.username }}
+            </h1>
+            <small>{{ user.email }}</small>
         </div>
-    {% endfor %}
+    {% else %}
+        <div class="header">
+            <h1>
+                {% if request.user == user %}
+                    <a href="{% url 'accounts:edit_profile' %}"><i class="far fa-edit"></i></a>
+                {% endif %}
+                {{ user.username }} - {{ user.points }}<span class="lowercase">p</span>
+            </h1>
+            <small>{{ user.email }}</small>
+        </div>
+        <h2>Motto</h2>
+        {% if user.motto %}
+            <i>"{{ user.motto }}"</i>
+        {% else %}
+            {% if request.user == user %}
+                <i>Du har inte satt något motto än. <a href="{% url 'accounts:edit_profile' %}">Sätt ditt motto här.</a></i>
+            {% else %}
+                <i>Användaren har inte satt något motto.</i>
+            {% endif %}
+        {% endif %}
+        <h2>Registrerade jobb</h2>
+        {% for day, jobs in day_grouped.items %}
+            <h3 class="job-day">{{ day }}</h3>
+            <div class="joblist">
+                {% for job in jobs %}
+                    {% job_component job %}
+                {% endfor %}
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock content %}
