--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -11,7 +11,7 @@
 {% endblock head %}
 
 {% block content %}
-    {% if request.user.is_superuser %}
+    {% if user.is_staff %}
         <div class="header">
             <h1>
                 {% if request.user == user %}
