--- a/fadderanmalan/static/sass/components/job.sass
+++ b/fadderanmalan/static/sass/components/job.sass
@@ -7,24 +7,18 @@
     display: block
     max-width: 500px
     overflow-y: hidden
-    background-color: #63bf69
-    color: white
     margin: 10px
     padding: 10px
     transition: all .2s !important
+    border-radius: 4px
     &:hover
         text-decoration: none
-        box-shadow: 0 1px 2px 0 #222
-    &.full, &.locked
-        background-color: #9c9c9c
+        box-shadow: 0 1px 3px 0 #222
 
 .job-title
     position: relative
-    i
-        color: white
 
 .job-status
-    color: white
     position: absolute
     right: 0
     top: 0
@@ -35,5 +29,3 @@
     > *
         display: inline
 
-.job-body
-    color: white
