--- a/fadderanmalan/static/sass/jobsignup.sass
+++ b/fadderanmalan/static/sass/jobsignup.sass
@@ -96,6 +96,8 @@
     padding: 10px 25px
     height: 52px
     background-color: #222
+    position: relative
+    z-index: 10
 
 .divider
     width: 94vw
